*gentoo-sources-kernelimage-4.19.79 (21 Oct 2019)

  21 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-kernelimage-4.19.79.ebuild,
  -gentoo-sources-kernelimage-4.19.71.ebuild,
  -gentoo-sources-kernelimage-4.19.72.ebuild,
  -gentoo-sources-kernelimage-4.19.73.ebuild,
  -gentoo-sources-kernelimage-4.19.74.ebuild:
  sys-kernel/gentoo-sources-kernelimage: version bump to 4.19.79 - remove old.

*gentoo-sources-kernelimage-4.19.74 (14 Oct 2019)

  14 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-kernelimage-4.19.74.ebuild,
  -gentoo-sources-kernelimage-4.19.74:
  sys-kernel/gentoo-sources-kernelimage: typo

  11 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-kernelimage-4.19.74:
  sys-kernel/gentoo-sources-kernelimage: version bump to 4.19.74

  04 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  gentoo-sources-kernelimage-4.19.73.ebuild:
  sys-kernel/gentoo-sources-kernelimage: fix cp

*gentoo-sources-kernelimage-4.19.73 (04 Oct 2019)

  04 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-kernelimage-4.19.73.ebuild:
  sys-kernel/gentoo-sources-kernelimage: Version bump to 4.19.73

*gentoo-sources-kernelimage-4.19.72 (02 Oct 2019)

  02 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
  +gentoo-sources-kernelimage-4.19.72.ebuild:
  sys-kernel/gentoo-sources-kernelimage: version bump to 4.19.72

*gentoo-sources-kernelimage-4.19.71 (30 Sep 2019)

  30 Sep 2019; Agostino Sarubbo <ago@gentoo.org> +files/bashrc,
  +gentoo-sources-kernelimage-4.19.71.ebuild, +metadata.xml:
  sys-kernel/gentoo-sources-kernelimage: First commit